--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,6 +21,7 @@
     "import matplotlib.pyplot as plt\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from pathlib import Path\n",
+    "from tqdm import tqdm\n",
     "\n",
     "file_path = Path('data') / 'tinyshakespeare' / 'input.txt'\n",
     "with open(file_path, 'r') as f:\n",
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +61,7 @@
        "'hello world'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +85,7 @@
        "torch.Size([1115394])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +106,7 @@
        "(torch.Size([1003854]), torch.Size([111540]))"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,23 +176,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[49, 43, 50, 63,  1,  5, 58, 47],\n",
-       "         [58,  0, 33, 52, 51, 43, 56, 47],\n",
-       "         [51,  6,  1, 58, 53,  1, 51, 39],\n",
-       "         [ 1, 58, 46, 47, 57,  1, 39, 58]]),\n",
-       " tensor([[43, 50, 63,  1,  5, 58, 47, 57],\n",
-       "         [ 0, 33, 52, 51, 43, 56, 47, 58],\n",
-       "         [ 6,  1, 58, 53,  1, 51, 39, 49],\n",
-       "         [58, 46, 47, 57,  1, 39, 58, 58]]))"
+       "(tensor([[ 1, 47, 52, 55, 59, 47, 56, 43],\n",
+       "         [52, 42,  1, 40, 43, 63, 53, 52],\n",
+       "         [41, 50, 53, 59, 42, 57,  1, 39],\n",
+       "         [45,  1, 39, 52, 42,  1, 44, 53]]),\n",
+       " tensor([[47, 52, 55, 59, 47, 56, 43, 11],\n",
+       "         [42,  1, 40, 43, 63, 53, 52, 42],\n",
+       "         [50, 53, 59, 42, 57,  1, 39, 56],\n",
+       "         [ 1, 39, 52, 42,  1, 44, 53, 56]]))"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -220,13 +221,13 @@
     {
      "data": {
       "text/plain": [
-       "[\"\\noA!ptlZ:Fa&S\\nxoKNY jVHkSpOCsjEonGIXnb$OXYCYwnV'QAKTXC&&GDMRaTwkaPUj$rOK\\nO P o\\nIlCM.ZjjuDL.IJ\\nfqwbAxV\",\n",
-       " \"\\n':.OfCg'E,dfK!;$\\n\\nIfpcjKZrYEAo;XKh,bfi;SpTrrNyVlk\\nnWUUZGMGRtlEAAYkRxd,rOTwAl\\n3gVUC.'OXCglm!3tNU,Hptv\",\n",
-       " \"\\n\\nU!tykWg.k !AwZcj:FH;oUU?XSj&VTXjVR\\nkck;'vXPf\\nNb\\nsKO cYkIqZqpAmxLyU3XhJd\\n&$HE$Jcr vs,3?yUGKyK,EJaLaC\",\n",
-       " \"\\n'KLCg$O'TpT:3?IZGAQv-'gaWAQyG'hghsvOoZYR:FJsrPc&j.PT.CiFcA\\nN$oZASfCLtrViFLTP3PYErstrdKRu\\nN!CgzVCvuyb\"]"
+       "[\"\\n\\nggEU:KWq;Sr!thQ:3n-ayxeAz$xcTJhCwsw3X\\n.jGeVnffL-zANYwRG&$ep?Jy mp.kyqIWd'T;n-w\\nMhAAQDYprbR3Su3ZNVVX\",\n",
+       " \"\\nsP hyb3WKh!FdyiWN?$I$NqI.FXKxxjC3lb;soba'SfuG&l,hwtf cWHl!PXadeSJ?Jy,a!zrs'aSG3xmakKkBcZZUixQN?u3aDi\",\n",
+       " \"\\nwtzsyavgI:eQ'$pDv-cW mmbWaQRrHy\\n3X3kduWNFAY-.AB\\nMd-ZaZcdN-WciDH.&Aabw-$W:KyLg$pNW'vG3z$lbwq3pgNB:\\nIx\",\n",
+       " \"\\nZoXdt 'qI-wn-pgsIG'HF'zsYZLsFqI-Z---C &tDW&-dn--u33wbmAVY-z&?dBkQVKaDnVfh.uho;ZET'yn-OLPy&'iQPB:j,gs\"]"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,16 +269,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(4.7857, grad_fn=<NllLossBackward0>)"
+       "tensor(4.7419, grad_fn=<NllLossBackward0>)"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,11 +289,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[epoch   1/5][train loss]    2.45248\n",
+      "[epoch   2/5][train loss]    2.45254\n",
+      "[epoch   3/5][train loss]    2.45256\n",
+      "[epoch   4/5][train loss]    2.45257\n",
+      "[epoch   5/5][train loss]    2.45256\n"
+     ]
+    }
+   ],
    "source": [
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=1e-3)\n"
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=1e-3)\n",
+    "\n",
+    "epoch = 5\n",
+    "model.train()\n",
+    "for e in range(epoch):\n",
+    "    running_loss = 0\n",
+    "    for i, (x, y) in enumerate(DataLoader(train_dataset, batch_size=64, shuffle=True, drop_last=True), start=1):\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        y_hat = model(x)\n",
+    "        loss = F.cross_entropy(y_hat.view(-1, len(chars)), y.view(-1))\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        running_loss += loss.item()\n",
+    "        print(f\"[epoch {e+1:>3}/{epoch}][train loss] {running_loss/i:>10.5f}\", end='\\r')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Betig ape g dle.\n",
+      "N:\n",
+      "Indeyofo andifoull n\n",
+      "Wivopand.\n",
+      "ULofango y gaviser fa'd hir I.\n",
+      "\n",
+      "As chind pu f the ind be, pugind, we\n",
+      "ICHES:\n",
+      "Th fo:\n",
+      "Thal mind luck ono lls t ire; tire,\n",
+      "ENGothant,\n",
+      "Whton werod han y h\n"
+     ]
+    }
+   ],
+   "source": [
+    "sequence = generate(model, start_token=torch.zeros(1, 1, dtype=torch.long), max_iter=200)\n",
+    "print(''.join(decode(sequence[0].tolist())))"
    ]
   }
  ],
